<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dp"
		android:layout_marginTop="30dp"
		android:orientation="horizontal">


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:layout_marginTop="12dp"
				android:text="出发"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:textSize="18sp"
				android:gravity="bottom"
				android:text="目的"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">


			<TextView
				android:id="@+id/tvFromWhere"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="30sp"
				android:gravity="center"
				android:text="@string/beijing"/>

			<TextView
				android:id="@+id/tvToWhere"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="30sp"
				android:gravity="center"
				android:layout_marginTop="15dp"
				android:text="@string/huizhou"/>

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center"
			android:orientation="vertical">
			<Button
				android:id="@+id/btnChangeText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/btn_change"/>
		</LinearLayout>


	</LinearLayout>



	<View
		android:layout_width="fill_parent"
		android:layout_height="1px"
		android:background="@color/bg_gray"/>

	<LinearLayout
		android:id="@+id/lyDateSelect"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dp">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="出发日期"
				android:textSize="18sp"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="right">

			<TextView
				android:id="@+id/tvMonth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"/>
			<TextView
				android:id="@+id/tvWeek"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="#FF4500"
				android:paddingLeft="5dp"/>

		</LinearLayout>

	</LinearLayout>

	<View
		android:layout_width="fill_parent"
		android:layout_height="1px"
		android:background="@color/bg_gray"/>

	<LinearLayout
		android:id="@+id/lyCarModel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dp">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/select_car"
				android:textSize="18sp"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:paddingLeft="2dp">

			<TextView
				android:id="@+id/tvCar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/all_car"
				android:textSize="20sp"
				android:singleLine="true"/>
		</LinearLayout>

	</LinearLayout>

	<View
		android:layout_width="fill_parent"
		android:layout_height="1px"
		android:background="@color/bg_gray"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="20dp">


		<Button android:id="@+id/btnCheckTwo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_checkTwo"
			android:textSize="25sp"
			android:padding="10dp"/>
	</LinearLayout>

</LinearLayout>
